--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Weather App</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
-    crossorigin="anonymous"
-  />
-  <link href="src/style.css" rel="stylesheet" type="text/css" />
-</head>
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Weather App</title>
+  </head>
 <body>
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
                 <div class="overview">
-                    <h1>
+                    <h1 id="city">
                         Toronto
                     </h1>
                     <ul>
                         <li>
-                            Friday 6:00
+                            Last Updated: <span id="date"></span>
                         </li>
-                        <li>
+                        <li id="description">
                             Clear
                         </li>
                     </ul>
@@ -37,21 +40,18 @@
                              class="float-left"
                              />
                         <div class="float-left">
-                            <strong>12</strong>
+                            <strong id="temperature"></strong>
                             <span class="units">°C | <a href="#">°F</a></span>
                         </div>
                     </div>
                 </div>
                 <div class="col-6">
                     <ul>
-                        <li>
-                            Precipitation: 0%
-                        </li>
                          <li>
-                            Humidity: 64%
+                            Humidity: <span id="humidity"></span>
                         </li>
                         <li>
-                            Wind: 2 km/h
+                            Wind: <span id="wind"></span> km/h
                         </li>
                     </ul>
                 </div>
