--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <div class="clearfix weather-temperature">
                         <img src=""
                              alt="Clear"
+                             id="icon"
                              class="float-left"
                              />
                         <div class="float-left">
