--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
     <link rel="stylesheet" href="src/style.css" />
     <title>Weather App</title>
   </head>
@@ -19,6 +18,26 @@
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
+                <form id="search-form" class="mb-4">
+                    <div class="row">
+                        <div class="col-9">
+                            <input 
+                                type="search"
+                                placeholder="Enter city"
+                                id="city-input"
+                                class="form-control"
+                                autocomplete="off"
+                                />
+                        </div>
+                        <div class="col-3">
+                            <input 
+                                type="submit"
+                                value="Search"
+                                class= "btn btn-primary w-100" 
+                            />
+                        </div>
+                    </div>
+                </form>
                 <div class="overview">
                     <h1 id="city">
                         Toronto
@@ -36,7 +55,7 @@
                 <div class="col-6">
                     <div class="clearfix weather-temperature">
                         <img src=""
-                             alt="Clear"
+                             alt=""
                              id="icon"
                              class="float-left"
                              />
@@ -66,8 +85,6 @@
         </small>
         </div>
     </div>
-    <script>
-        src="src/app.js"
-    </script>
+    <script src="src/app.js"></script>
 </body>
 </html>
